# libmem

./: CMakeLists.txt  HISTORY.md  LICENSE  README.md
src/: CMakeLists.txt
src/mem/: CMakeLists.txt  allocator.c  allocator.h  buffer.c  buffer.h  pool.c  pool.h
src/mem/internal/: unused.h
src/tests/: CMakeLists.txt  allocator_aligned_tests.c  allocator_aligned_tests.cpp  allocator_counted_tests.c  allocator_counted_tests.cpp  allocator_guarded_tests.c  allocator_guarded_tests.cpp  allocator_tests.c  allocator_tests.cpp  allocator_traced_tests.c  allocator_traced_tests.cpp  buffer_tests.c  buffer_tests.cpp  pool_tests.c  pool_tests.cpp  testing.h
