function( add_libmem_test test_name source_files )
	add_executable( ${test_name} ${source_files} )
	target_link_libraries( ${test_name} mem )
	add_dependencies( ${test_name} mem )
	add_test( ${test_name} ${test_name} )
	if(VALGRIND AND VALGRIND_ENABLE)
		add_test( ${test_name}_valgrind ${VALGRIND} ${VALGRIND_ARGS} ./${test_name} )
	endif( )
endfunction( add_libmem_test )

add_libmem_test( allocator_tests allocator_tests.c )
add_libmem_test( allocator_tests_cpp allocator_tests.cpp )
add_libmem_test( allocator_aligned_tests allocator_aligned_tests.c )
add_libmem_test( allocator_aligned_tests_cpp allocator_aligned_tests.cpp )
add_libmem_test( allocator_counted_tests allocator_counted_tests.c )
add_libmem_test( allocator_counted_tests_cpp allocator_counted_tests.cpp )
add_libmem_test( allocator_guarded_tests allocator_guarded_tests.c )
add_libmem_test( allocator_guarded_tests_cpp allocator_guarded_tests.cpp )
add_libmem_test( allocator_traced_tests allocator_traced_tests.c )
add_libmem_test( allocator_traced_tests_cpp allocator_traced_tests.cpp )
add_libmem_test( buffer_tests buffer_tests.c )
add_libmem_test( buffer_tests_cpp buffer_tests.cpp )
add_libmem_test( pool_tests pool_tests.c )
add_libmem_test( pool_tests_cpp pool_tests.cpp )
